deploy/appservice2.yaml
apiVersion: v1
kind: Service
metadata:
  name: second-local-deploy-svc
spec:
  type: NodePort
  selector:
    app: second-local-deploy
  ports:
  - name: local-deploy-port
    protocol: TCP
    port: 8080
    targetPort: 8080
