deploy/redisservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-deploy-service
spec:
  selector:
    app: local-redis
  ports:
  - name: redis-port
    protocol: TCP
    port: 6379
    targetPort: 6379
