deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  # annotations:
  #   kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: app.example.com   
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: local-deploy-svc
                port:
                  number: 8080
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: second-local-deploy-svc
                port:
                  number: 8080        
    # - host: app2.example.com       
    #   http:
    #     paths:     
    #       - path: /app2
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: second-local-deploy-svc
    #             port:
    #               number: 8080
